--- a/samples/HelloWorld/package.json
+++ b/samples/HelloWorld/package.json
@@ -10,12 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fluentui/react": "^8.122.16",
+    "@fluentui/react-components": "^9.67.0",
+    "@fluentui/react-icons": "^2.0.306",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@pa-client/power-code-sdk": "https://github.com/microsoft/PowerAppsCodeApps/releases/download/v0.0.2/6-18-pa-client-power-code-sdk-0.0.1.tgz",
+    "@pa-client/power-code-sdk": "https://github.com/microsoft/PowerAppsCodeApps/releases/download/v0.0.4/7-31-pa-client-power-code-sdk-0.0.1.tgz",
     "@eslint/js": "^9.25.0",
     "@types/node": "^20.11.8",
     "@types/react": "^18.2.33",
