--- a/samples/HelloWorld/package.json
+++ b/samples/HelloWorld/package.json
@@ -3,8 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {    
-    "dev": "start vite && start pac code run",
+  "scripts": {
+    "dev": "concurrently \"vite\" \"pac code run\"",
+    "dev:vite": "vite",
+    "dev:pac": "pac code run",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -16,12 +18,13 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@pa-client/power-code-sdk": "https://github.com/microsoft/PowerAppsCodeApps/releases/download/v0.0.4/7-31-pa-client-power-code-sdk-0.0.1.tgz",
     "@eslint/js": "^9.25.0",
+    "@pa-client/power-code-sdk": "https://github.com/microsoft/PowerAppsCodeApps/releases/download/v0.0.4/7-31-pa-client-power-code-sdk-0.0.1.tgz",
     "@types/node": "^20.11.8",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
     "@vitejs/plugin-react": "^4.4.1",
+    "concurrently": "^9.2.0",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
