--- a/samples/FluentSample/power.config.json
+++ b/samples/FluentSample/power.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "",
+  "appId": "d394cbbd-d382-47a4-a646-e1d93fcff4bb",
   "appDisplayName": "App From Scratch",
   "description": null,
   "environmentId": "3466824b-1fef-ef36-add8-745f90acc09b",
